--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -10,6 +10,15 @@
     align-self: center;
     padding: 1rem;
   }
+  .profile-list {
+    display: flex;
+    width: 32%;
+    margin-top: 1rem;
+    img {
+      width: 100%;
+      // margin: 0.5rem;
+    }
+  }
 }
 
 @media only screen and (max-width: 768px) {
