--- a/src/components/DashboardHeader/style.scss
+++ b/src/components/DashboardHeader/style.scss
@@ -5,6 +5,17 @@
     color: #000;
     display: flex;
     align-items: center;
+    .unread-notifications-count {
+      position: absolute;
+      top: -0.35rem;
+      right: -0.25rem;
+      background-color: rgb(115, 75, 255);
+      color: #fff;
+      font-size: 0.75rem;
+      line-height: 0.75rem;
+      border-radius: 50%;
+      padding: 0.1rem;
+    }
     .notifications-popup-backdrop {
       position: fixed;
       width: 100vw;
@@ -47,6 +58,21 @@
           cursor: pointer;
           font-weight: 700;
         }
+      }
+    }
+  }
+  .membership-modal-backdrop {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .membership-modal-main {
+      width: 20rem;
+      img {
+        width: 100%;
       }
     }
   }
