--- a/src/components/HomeScreen/style.scss
+++ b/src/components/HomeScreen/style.scss
@@ -14,8 +14,10 @@
         height: fit-content;
         .community-list-card-image {
           width: 100%;
-          height: 200px;
           background-color: #f2f2f2;
+          img {
+            width: 100%;
+          }
         }
         .community-list-card-content {
           padding: 1rem;
@@ -48,6 +50,12 @@
           }
         }
       }
+    }
+    .nothing-left-to-claim {
+      margin-top: 5rem;
+      width: 100%;
+      text-align: center;
+      color: #666;
     }
   }
 }
