--- a/src/components/MyGraphsScreen/style.scss
+++ b/src/components/MyGraphsScreen/style.scss
@@ -1,27 +1,18 @@
-.community-list-container {
-  width: 100%;
-  min-height: 100vh;
-  .community-list-title {
-    font-size: 2.5rem;
-    margin: 2rem 2rem 0 3rem;
-    font-weight: 800;
-    text-align: center;
-  }
-  .community-list-search {
+.my-graphs-screen-container {
+  .create-graph-wrapper {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    input {
-      padding: 0.5rem 1rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      margin-top: 2rem;
-      width: 30%;
+    flex-direction: row-reverse;
+    margin: 2rem 0;
+    button {
+      padding: 0.75rem 1.5rem;
+      background-color: rgb(99, 102, 241);
+      border-radius: 0.5rem;
+      color: #fff;
+      border: 0;
+      cursor: pointer;
       font-size: 1rem;
-      line-height: 1.5rem;
-      outline: none;
-      color: #555;
-      min-width: 300px;
-      box-shadow: 0px 0px 3px 0px rgba(51, 51, 51, 0.26);
+      font-weight: 500;
     }
   }
   .community-list-wrapper {
@@ -57,23 +48,30 @@
           color: rgb(75, 85, 99);
           line-height: 1.5rem;
         }
-        .community-list-card-button {
-          display: flex;
-          align-items: center;
-          color: #fff;
+        .community-list-claimed-info {
+          font-weight: 600;
           margin-top: 1rem;
-          background-color: rgb(99, 102, 241);
-          padding: 0.5rem 1rem;
-          width: fit-content;
-          border-radius: 0.25rem;
-          img {
-            margin-right: 0.25rem;
-          }
-          &:hover {
-            cursor: pointer;
-          }
         }
       }
+    }
+  }
+  .no-graphs-created {
+    width: 100%;
+    margin-top: 5rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    button {
+      padding: 0.75rem 1.5rem;
+      background-color: rgb(99, 102, 241);
+      border-radius: 0.5rem;
+      color: #fff;
+      border: 0;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 500;
+      margin-top: 1.5rem;
     }
   }
 }
