--- a/src/components/HomeScreen/style.scss
+++ b/src/components/HomeScreen/style.scss
@@ -57,5 +57,23 @@
       text-align: center;
       color: #666;
     }
+    .claimed-tokens-wrapper {
+      .claimed-tokens-title {
+        margin: 2rem 0;
+        font-size: 1.5rem;
+        font-weight: bold;
+      }
+      .claimed-tokens-grid-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 1rem;
+        div {
+          width: 100%;
+          img {
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 }
